# survivor-ligamx-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .render-deploy-trigger  CHANGELOG.md  COMMANDS.md  HANDOFF.md  PROYECTO_MASTER.md  README.md  add_advanced_markets.py  add_alerts_endpoint.py  add_debug_api.py  add_debug_jornadas.py  add_debug_scraper.py  add_rate_limit.py  analisis_valor.py  analizar_1x2.py  dashboard_ligamx.txt  debug_monitor.py  decode_momios.py  ejecutar_fases_1_2.py  estructurar_momios.py  extraer_momios.py  fix_api_final.py  fix_dash.py  fix_dashboard.py  fix_dashboard2.py  historico_ligamx.csv  historico_ligamx_4h.csv  lifecycle-diagnostic.txt  ligamx_clean.csv  main.py  merge_final.py  momios_1x2_estructurados.csv  momios_decodificados.csv  momios_finales.csv  monitor_ligamx.py  mypy-diagnostic.txt  mypy-report.txt  (+22 more)
.github/: dependabot.yml
data/: fichajes.json  jornadas.json
data_kiro/: README_KIRO.json  ligamx_odds_clean.csv
datos_liga_mx/: 20260626_221753_902956_web_nr.json  20260626_222225_453692_web_nr.json
datos_ligamx/: 20260626_223122_275405_web_nr.json  20260626_223127_307499_web_nr.json  20260626_223145_677395_unknown.json  20260626_223145_745125_web_nr.json  20260626_223145_753582_web_nr.json  20260626_223145_756201_web_nr.json  20260626_223145_759719_web_nr.json  20260626_223145_762353_web_nr.json  20260626_223145_767598_web_nr.json  20260626_223145_771710_web_nr.json  20260626_223145_776848_web_nr.json  20260626_223145_785047_web_nr.json  20260626_223145_790724_web_nr.json  20260626_223145_795337_web_nr.json  20260626_223145_802317_web_nr.json  20260626_223145_810005_web_nr.json  20260626_223145_816251_web_nr.json  20260626_223146_125893_web_nr.json  20260626_223146_696151_web_nr.json  20260626_223147_113870_web_nr.json  20260626_223147_601053_web_nr.json  20260626_223148_276471_web_nr.json  20260626_223148_783296_web_nr.json  20260626_223149_323616_web_nr.json  20260626_223149_996643_web_nr.json  20260626_223150_545735_web_nr.json  20260626_223151_157841_web_nr.json  20260626_223151_744423_web_nr.json  20260626_223151_995477_web_nr.json  20260626_223222_035915_web_nr.json  20260626_223322_142582_web_nr.json  20260626_223434_815616_ws_push-sports_caliente_mx.json  20260626_224323_723117_ws_P.json  20260626_224323_815181_ws_R.json  20260626_224323_822507_ws_U.json  20260626_224329_008053_ws_U.json  20260626_224329_093872_ws_U.json  20260626_224329_100478_ws_U.json  20260626_224329_882608_ws_R.json  20260626_224331_031099_ws_U.json  (+12 more)
docker/: Dockerfile  docker-compose.yml
scripts/: api_health_matrix.py  apply_pick_lifecycle_v2.py  dashboard_odds.py  (+24 more)
(+195 files in other folders)
