# ===================================================================
# FUENTE CANÓNICA DE DEPENDENCIAS
# ===================================================================
# pyproject.toml es la ÚNICA fuente de verdad para dependencias.
# requirements.txt y requirements-dev.txt se regeneran desde aquí.
# Comando: pip-compile pyproject.toml (o usa scripts/sync_deps.sh)
# ===================================================================

[project]
name = "survivor-ligamx-bot"
version = "2.1.0"
description = "Asistente informativo para decisiones de Survivor Liga MX y pronósticos de partidos (1X2, Over/Under, BTTS, marcador). No apuesta ni envía picks automáticos."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CAILLOU77", url = "https://github.com/CAILLOU77"}
]
dependencies = [
    "fastapi==0.128.8",
    "uvicorn[standard]==0.39.0",
    "slowapi==0.1.10",
    "numpy==2.0.2",
    "scipy==1.13.1",
    "pandas==2.3.3",
    "pyarrow==21.0.0",
    "requests==2.32.5",
    "feedparser==6.0.12",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.1",
    "tzdata==2026.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long
    "E402",  # import not at top (needed for sys.path in entrypoints)
    "E702",  # multiple statements (semicolon; legacy style)
    "E731",  # lambda assigned
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # redefinitions in test fixtures

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]